[package]
name = "proc-macro-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
indicatif = "0.16"
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
toml = "0.5"
dashmap = { version = "5", features = ["rayon", "serde"] }